# PMS

./: .gitignore  HARNESS.md  agents.md  fix_participants.sql  import_objectives.py  overview.md
.harness/: errors.md
pms/backend/: .gitignore  Dockerfile  Makefile  alembic.ini  fix_closed_pending.sql  pyproject.toml  requirements.txt
pms/backend/alembic/: env.py
pms/backend/alembic/versions/: 00a82ba91945_value_grade_3_dimensions.py  0154822c38fa_add_calibration_and_approval.py  0a4144264e8b_add_cycle_mode_switches_and_stage_json_.py  124515811db3_add_objective_cycle_participant.py  1b1a7e062625_decouple_objective_cycle_from_.py  1fa2247f205e_add_employee_type_to_user.py  40f5265b3aec_add_probation_plan.py  4e88d9614e2d_add_feedback_record.py  4f0818179ab0_sync_schema_for_probation_and_user_.py  8fc0cf4bd137_add_user_base_role.py  9d6c7e8a2b3f_add_user_base_role_column.py  a088a1294289_v0_9_initial_schema.py  add_objective_status_fields.sql  (+6 more)
pms/backend/scripts/: check_contract.py
pms/backend/tests/: conftest.py  test_anonymous_feedback_3d.py  test_auth_role_switch.py  test_cache_invalidation.py  test_colleagues.py  test_cycle_update_and_scope.py  test_cycles.py  test_email_fallback.py  test_eval_detail_and_self_eval_switch.py  test_fte_guard.py  test_happy_path.py  test_historical_import.py  test_notification_send.py  test_objective_cycle_fixes.py  test_objective_weight.py  test_peer_decline.py  test_permission_boundaries.py  test_permission_fixes.py  test_probation.py  test_r4_cycle_switches.py  test_scope.py  test_score_validation.py  test_value_grades.py
(+145 files in other folders)
