# pyproject.toml - PMS 后端包配置
# 使用 PEP 621 规范声明项目元数据与依赖
[project]
name = "pms-backend"
version = "0.9.0"
description = "Performance Management System - backend (FastAPI + SQLModel)"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Web 框架
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # ORM / 数据校验
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6",
    # 数据库驱动
    "pymysql>=1.1",
    "cryptography>=43",
    # 迁移
    "alembic>=1.13",
    # Redis
    "redis>=5.2",
    # HTTP 客户端（调用企微 API）
    "httpx>=0.27",
    # 定时任务
    "apscheduler>=3.10",
    # 鉴权
    "pyjwt>=2.9",
    # 日志
    "loguru>=0.7",
    # Excel 导入导出
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]
